fix: css style for align status bar

--- a/src/components/MainMenu.css
+++ b/src/components/MainMenu.css
@@ -2,7 +2,7 @@
   display: flex
 }
 
-.main-menu .nav.nav--right {
+.main-menu .status-bar {
   margin-left: auto;
 }
 
